<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur5e_contactile_actions</name>
  <version>0.0.0</version>
  <description>MoveIt actions for UR5e (arm-only for now).</description>
  <maintainer email="dardanopietro@libero.it">user</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>moveit_ros_planning_interface</depend>

  <!-- Gripper: lo reinseriamo dopo quando serve -->
  <!-- <depend>contactile_gripper_ros2</depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

